Started work on unrotating periodic phase changes in RGB/HSV images

--- a/report/main.tex
+++ b/report/main.tex
@@ -28,6 +28,8 @@ For the mini-project, I opted for the first option: ``HDMI video cable eavesdrop
 
 \subsection*{Resampling}
 
+Mention you chose $fr = 2 * f_p$ because Nyquist.
+
 I initially tried performing perfect sinc interpolation, which worked fine for a test input, but took far too long on the IQ data (even for just a couple of frames).
 
 % TODO show perfect sinc interpolation code
