--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,8 +1,18 @@
 @misc{dspguru-resampling,
     title={Resampling},
-    url={https://dspguru.com/dsp/faqs/multirate/resampling/},
+    howpublished="\url{https://dspguru.com/dsp/faqs/multirate/resampling/}",
     journal={dspGuru},
     publisher={Iowegian International},
     year={2017},
     month={Mar}
+}
+
+@misc{dsp-julia-github,
+    title={{JuliaDSP/DSP.jl: Filter Design,
+    periodograms,
+    window functions,
+    and other digital signal processing functionality}},
+    howpublished="\url{https://github.com/JuliaDSP/DSP.jl}",
+    journal={GitHub},
+    author={JuliaDSP}
 }
